# FileSage

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  POSITIONING.md  PRODUCT_SPEC.md  ROADMAP.md  RULES.md  RUNTIME.md
src/file_organizer/: __init__.py  cli.py  core.py
src/filesage/: __init__.py  cli.py
tests/: test_core.py
