[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-file-organizer"
version = "0.1.0"
description = "A safe, explainable, dry-run-first file organizer."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "File Organizer contributors" }
]
keywords = ["files", "organizer", "automation", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities"
]
dependencies = []

[project.scripts]
file-organizer = "file_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

