[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "filesage"
version = "0.1.0"
description = "Evidence-driven file relationship runtime and safe cleanup planner for duplicates, archives, user policies, and risk-aware reports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "FileSage contributors" }
]
keywords = ["files", "organizer", "duplicates", "archives", "evidence", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Desktop Environment :: File Managers",
    "Topic :: Utilities"
]
dependencies = []

[project.scripts]
filesage = "filesage.cli:main"
file-organizer = "file_organizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
